--- a/css/style1.css
+++ b/css/style1.css
@@ -138,6 +138,10 @@ form .fields .input-field{
     font-size: 14px;
     font-weight: 400;
 }
+form .error{
+    
+    margin-left: 37%;
+}
 form button:hover{
     background-color: #265df2;
 }
@@ -154,6 +158,93 @@ form .buttons{
 }
 form .buttons button , .backBtn{
     margin-right: 14px;
+}
+.error
+{   
+    font-size: 20px;
+    text-align: center;
+    text-decoration: none;
+    word-spacing: 10px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    background-color: rgb(245, 58, 58);
+    color: white;
+    padding: 5px;
+    width: 20%;
+    border-radius: 5px;  
+}
+.error-circle{
+    
+    width: 30px;
+    height: 30px;
+    background: #990000;
+    border-radius: 120px;
+    border: 4px solid white;
+    color: white;
+    font-size: 15px;
+    font-weight: bold;
+    margin-top: -25px;;
+}
+/* .close{
+    position: absolute;
+    color: black;
+    right: 450px;
+    top: 385px;
+    width: 40px;
+    height: 40px;
+    opacity: 1;
+    
+}
+
+.close:before, .close:after {
+  position: absolute;
+  left: 15px;
+  content: ' ';
+  height: 33px;
+  width: 2px;
+  background-color: #333;
+
+}
+.close:before {
+  transform: rotate(45deg);
+}
+.close:after {
+  transform: rotate(-45deg);
+} */
+#message {
+  display: none;
+  background: #f1f1f1;
+  color: #000;
+  position: relative;
+  padding: 20px;
+  margin-top: 10px;
+}
+
+#message p {
+    padding: 10px 35px;
+    font-size: 10px;
+}
+.valid {
+    display: block;
+    color: green;
+}
+
+.valid:before {
+    display: block;
+    position: relative;
+    left: -35px;
+    content: "&#10004;";
+}
+
+
+.invalid {
+  color: red;
+}
+
+.invalid:before {
+  position: relative;
+  left: -35px;
+  content: "&#10006;";
 }
 
 @media (max-width: 750px) {
