--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #4070f4;
+    background-color: #29242446;
 }
 
 .container{
@@ -66,7 +66,7 @@ body{
     bottom: 0;
     height: 3px;
     width: 30px;
-    background-color: #4070f4;
+    background-color: #8b8f9c;
     border-radius: 25px;
 }
 .form .input-field{
